5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1573_1559.log
== SUBMITION (2019-03-13 14:18:49) 
-- CODE:
frase = "ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
print(frase.???)
-- EXECUTION TIME:
0.136274
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:18:53) 
-- CODE:
frase = "ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
print(frase.???)
-- ERROR:
File "XXXX", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:19:01) 
-- CODE:
frase = "ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA."
print(frase.???)
-- ERROR:
File "XXXX", line 2
    print(frase.???)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:21:34) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper(Ada Lovelace foi a primeira programadora da historia))
-- ERROR:
File "XXXX", line 2
    print(.upper(Ada Lovelace foi a primeira programadora da historia))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:21:37) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(.upper(Ada Lovelace foi a primeira programadora da historia))
-- EXECUTION TIME:
0.138465
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print(.upper(Ada Lovelace foi a primeira programadora da historia))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:23:07) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(Ada Lovelace foi a primeira programadora da historia).upper()
-- ERROR:
File "XXXX", line 2
    print(Ada Lovelace foi a primeira programadora da historia).upper()
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:23:11) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(Ada Lovelace foi a primeira programadora da historia).upper()
-- EXECUTION TIME:
0.1893
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print(Ada Lovelace foi a primeira programadora da historia).upper()
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:23:24) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print (Ada Lovelace foi a primeira programadora da historia).upper()
-- EXECUTION TIME:
0.25372
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print (Ada Lovelace foi a primeira programadora da historia).upper()
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:23:45) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(Ada Lovelace foi a primeira programadora da historia) .upper()
-- EXECUTION TIME:
0.134156
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print(Ada Lovelace foi a primeira programadora da historia) .upper()
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:23:56) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(Ada Lovelace foi a primeira programadora da historia.).upper()
-- EXECUTION TIME:
0.139221
-- ERROR:
  File "/home/codebench/codes/1573/1559/main.py", line 2
    print(Ada Lovelace foi a primeira programadora da historia.).upper()
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:24:17) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.").upper()
-- EXECUTION TIME:
0.154621
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1559/main.py", line 2, in <module>
    print("Ada Lovelace foi a primeira programadora da historia.").upper()
AttributeError: 'NoneType' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:24:24) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.") .upper()
-- EXECUTION TIME:
0.204887
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1559/main.py", line 2, in <module>
    print("Ada Lovelace foi a primeira programadora da historia.") .upper()
AttributeError: 'NoneType' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:25:38) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print("Ada Lovelace foi a primeira programadora da historia.".upper())
-- EXECUTION TIME:
0.279431
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
